header jumping text fix ?

--- a/style/main.css
+++ b/style/main.css
@@ -106,7 +106,7 @@
     top : 0;
     margin : 0;
     overflow: hidden;
-    position: fixed;
+    /*position: fixed;*/
     width: 100%;
     padding-top: 0.7em;
   }
